--- a/src/main/resources/templates/replay.html
+++ b/src/main/resources/templates/replay.html
@@ -5,7 +5,7 @@
     <title>Replay</title>
 </head>
 <body>
-<tr><a th:href="@{/}">Начать новую игру</a></tr><br>
+<tr><a th:href="@{/}">Start new game</a></tr><br>
 <tr th:each="string : ${replay}">
     <td th:text="${string}"></td><br>
 </tr>
