--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -5,7 +5,7 @@
     <title>Result</title>
 </head>
 <body>
-<!--<td th:text="${winnerName}"></td><br>-->
+<td th:text="${gameResult}"></td><br>
 <a th:href="@{/}">Start new game</a>
 <br>
 <a th:href="@{/records/}">Watch records</a>
